--- a/todo.txt
+++ b/todo.txt
@@ -17,3 +17,17 @@
 *: Check if linked list has loops.
 
 *: Merge 2 linked list.
+
+*: rearrange linked list so that all the odd numbers come first then even
+    * e.g. : 1->4->2->5->3->6 becomes 1->5->3->4->2->2->6
+
+*: reverse queue
+
+*: n queue in an array
+
+*: queue using stack
+
+*: find min,max from an array with least time complexity
+
+*: find a number smaller than number at index i in the index range 0 to i-1 for each number in the array
+
